[package]
name = "minecraft-exporter"
version = "0.1.0"
authors = ["Jamie McClymont <jamie@kwiius.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.40"
serde = { version = "1.0.98", features = ["derive"] }
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3.5"
hyper = "0.13.6"
listenfd = "0.3.3"
url = "2.1.1"
tracing = "0.1.14"
tracing-subscriber = "0.2.5"
